# mapeced

./: Cargo.toml  LICENSE  README.md  example-config.toml
assets/: ocn_vc_rules.json  static_rules.json  v6plus_rules.json
contrib/: config.toml  mapeced.service  postinst  postrm  prerm
docs/: config-format.md  mape-port-allocation.md  responsibilities.md  v6plus-spec.md
docs/plan/: implementation-plan.md  integration-test-plan.md
examples/: show_nft_rules.rs  show_tc_commands.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/daemon/: lifecycle.rs  mod.rs  runner.rs  state.rs
src/dhcpv6/: capture.rs  lease_watcher.rs  mod.rs  parser.rs
src/map/: calc.rs  mod.rs  ocn_vc_rules.rs  port_set.rs  rule.rs  static_rules.rs  v6plus_rules.rs
src/netlink/: addr.rs  mod.rs  route.rs  tunnel.rs
src/nftables/: manager.rs
tests/: dhcpv6_e2e.rs  lease_watcher.rs  lifecycle.rs  netlink.rs  nftables.rs
tests/common/: mod.rs
tools/: gen_v6plus_rules.py
tools/docker-test/: Dockerfile  README.md  run-tests.sh
