[package]
name = "mapeced"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.29", features = ["sched"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"
nix = { version = "0.29", features = ["socket", "net", "inotify"] }
libc = "0.2"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[[test]]
name = "lease_watcher"
path = "tests/lease_watcher.rs"

[[test]]
name = "dhcpv6_e2e"
path = "tests/dhcpv6_e2e.rs"

[[test]]
name = "netlink"
path = "tests/netlink.rs"

[[test]]
name = "nftables"
path = "tests/nftables.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"
