[package]
name = "mapeced"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "MAP-E CE daemon — RFC 7597 MAP-E client for Linux via DHCPv6"
authors = ["negineri <negineri@sfc.wide.ad.jp>"]

[package.metadata.deb]
maintainer = "negineri <negineri@sfc.wide.ad.jp>"
extended-description = """\
mapeced is a MAP-E (RFC 7597) DHCPv6 client daemon for Linux.
It retrieves MAP-E configuration via DHCPv6 (RFC 7598 OPTION_S46_CONT_MAPE),
calculates EA-bits, PSID and port sets, and configures the Linux kernel
with IPv6/IPv4 addresses, ip6tnl tunnels, default routes and nftables rules.
Supports v6plus static rule tables (690 built-in rules)."""
section = "net"
priority = "optional"
depends = "$auto, nftables (>= 0.9.3), iproute2"
assets = [
    { source = "target/release/mapeced", dest = "usr/sbin/mapeced", mode = "0755" },
    { source = "contrib/config.toml", dest = "etc/mapeced/config.toml", mode = "0644" },
    { source = "README.md", dest = "usr/share/doc/mapeced/README.md", mode = "0644" },
]
conf-files = ["/etc/mapeced/config.toml"]
maintainer-scripts = "contrib"
systemd-units = { unit-name = "mapeced", unit-scripts = "contrib", enable = false, start = false }


[dependencies]
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.29", features = ["sched"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"
nix = { version = "0.29", features = ["socket", "net", "inotify"] }
libc = "0.2"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[[test]]
name = "lease_watcher"
path = "tests/lease_watcher.rs"

[[test]]
name = "dhcpv6_e2e"
path = "tests/dhcpv6_e2e.rs"

[[test]]
name = "netlink"
path = "tests/netlink.rs"

[[test]]
name = "nftables"
path = "tests/nftables.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"
